# py-ham-bbs

./: .gitignore  LICENSE  README.md  direwolf.conf  main.py  pyproject.toml
.github/workflows/: python-tests.yml
src/: main.py
src/lib/: __init__.py  terminal.py
tests/: test_main.py
tests/lib/: test_terminal.py
