# Project configuration
[project]
name = "py-ham-bbs"
version = "0.1.0"
description = "Python based BBS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

# pytest configuration
[tool.pytest]
minversion = "9"
testpaths = ["tests"]
addopts = ["-v"]
python_files = ["test_*.py"]
filterwarnings = ["always"]
pythonpath = ["src"]

# Install with uv sync --group <name>
# Or uv sync --dev <name>
[dependency-groups]
dev = ["pytest"]
